--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -59,6 +59,8 @@
 @import url("blocks/requirements.css");
 @import url("blocks/faq.css");
 @import url("blocks/blog.css");
+@import url("blocks/about.css");
+@import url("blocks/subpage.css");
 
 /* Responsive */
 @import url("responsive.css");
