--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -62,6 +62,7 @@
 @import url("blocks/about.css");
 @import url("blocks/subpage.css");
 @import url("blocks/login.css");
+@import url("blocks/loan-apply.css");
 
 /* Responsive */
 @import url("responsive.css");
